Создание клиент-серверных взаимодействий между контейнерами клиента и сервера через CORS. Добавление базовой страницы HTML и возможности отправки данных с помощью AJAX. Добавление получения ответа от сервера и дальнейшей его обработки с выводом на странице.

--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -19,15 +19,14 @@ http {
         root $base_root;
 
         charset UTF-8;
-        index index.html;
+        index index.html index.php;
 
         location / {
             root $base_root;
             try_files $uri $uri/ /index.php$is_args$args;
         }
-
         location ~ ^/.+\.php(/|$) {
-            fastcgi_pass php:9000; # proxy requests to a TCP socket
+            fastcgi_pass php:9000;
             fastcgi_split_path_info ^(.+\.php)(.*)$;
             include /etc/nginx/fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
