--- a/server/nginx/nginx.conf
+++ b/server/nginx/nginx.conf
@@ -24,10 +24,23 @@ http {
         location / {
             root $base_root;
             try_files $uri $uri/ /index.php$is_args$args;
+            ##CORS on Nginx // Правила для входящих на серверную часть запросов TODO: переместить потом в отдельный файл
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                #Если пользовательские заголовки и заголовки различных браузеров *должны* быть OK, но это не так
+                add_header 'Access-Control-Allow-Headers' 'Origin,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                #Сообщить клиенту, что эта pre-flight информация действительна в течение 20 дней
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; application/json; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            ##CORS on Nginx
         }
 
         location ~ ^/.+\.php(/|$) {
-            fastcgi_pass php:9000; # proxy requests to a TCP socket
+            fastcgi_pass php:9000;
             fastcgi_split_path_info ^(.+\.php)(.*)$;
             include /etc/nginx/fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
