Пробую сделать оптимальное расположение файлов. Ищу смысл в доп. перенаправлении в конфигах nginx. Первые попытки разобраться в построении ветвистого иерархического дерева (наподобие генеалогического).

--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -6,9 +6,9 @@ events {
 }
 
 http {
-    include       mime.types;
+    include mime.types;
     default_type  application/octet-stream;
-    sendfile        on;
+    sendfile on;
     keepalive_timeout  200;
     client_max_body_size 25m;
     server {
@@ -20,11 +20,22 @@ http {
 
         charset UTF-8;
         index index.html index.php;
-
+        #
         location / {
             root $base_root;
             try_files $uri $uri/ /index.php$is_args$args;
         }
+        #В случае попадания на страницу persons
+        location /persons {
+            root $base_root;
+            try_files $uri $uri/ /pages/persons.html$is_args$args;
+        }
+        #В случае попадания на страницу branches
+        location /branches {
+            root $base_root;
+            try_files $uri $uri/ /pages/branches.html$is_args$args;
+        }
+
         location ~ ^/.+\.php(/|$) {
             fastcgi_pass php:9000;
             fastcgi_split_path_info ^(.+\.php)(.*)$;
