--- a/server/nginx/nginx.conf
+++ b/server/nginx/nginx.conf
@@ -39,6 +39,11 @@ http {
             ##CORS on Nginx
         }
 
+        location /lol {
+                    root $base_root;
+                    try_files $uri $uri/ /lol.php$is_args$args;
+                }
+
         location ~ ^/.+\.php(/|$) {
             fastcgi_pass php:9000;
             fastcgi_split_path_info ^(.+\.php)(.*)$;
