Попытки в построении ветвистого иерархического дерева не увенчались успехом. Попытка в дизайн домашней страницы и похожего стиля с другими страницами. Далее попытка создать функционал для добавления/удаления/изменения контактов. Основа положена в изначальной странице contacts, которая теперь persons. После завершения страницы contacts страница persons будет удалена.

--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -20,15 +20,21 @@ http {
 
         charset UTF-8;
         index index.html index.php;
-        #
+        #Локации===============================
+        #Корневой адрес------------------------
         location / {
             root $base_root;
             try_files $uri $uri/ /index.php$is_args$args;
         }
-        #В случае попадания на страницу persons
+        #В случае попадания на страницу contacts
         location /persons {
             root $base_root;
             try_files $uri $uri/ /pages/persons.html$is_args$args;
+        }
+        #В случае попадания на страницу contacts
+        location /contacts {
+            root $base_root;
+            try_files $uri $uri/ /pages/contacts.html$is_args$args;
         }
         #В случае попадания на страницу branches
         location /branches {
