--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.9'
 
 #Внутренняя сеть меж контейнерами
 networks:
-  bridge:
+  app-network:
     driver: bridge
 
 #Контейнеры
@@ -11,8 +11,8 @@ services:
 
   #Клиент-контейнер для фронтенда
   client:
-    #Ставится образ сервера для "оживления" кода
-    image: nginx:1.22
+    #Сборка из образа nginx
+    image: nginx:1.22-alpine
     #Название контейнера для управления на стороне разработчика
     container_name: client_container
     #{Порт на стороне разработчика}:{Порт на стороне контейнера}
@@ -20,31 +20,16 @@ services:
       - "81:80"
     #"Внутренняя сеть" для взаимодействия между контейнерами
     networks:
-      - bridge
-    links:
-      - server
+      - app-network
     #Папки, в которых происходит дублирование файлов на сторонах >>> {у разработчика}:{внутри контейнера}
     volumes:
-      - ./client/code:/var/www/html
-      - ./client/nginx/nginx.conf:/etc/nginx/nginx.conf
-    #Заранее заданные внутри контейнера переменные среды для дальнейшего использования
-    environment:
-      - TZ=${ENV_TZ}
-      - SERVER_ADDR=${ENV_SERVER_ADDR}
-    #Запускается или пакуется ТОЛЬКО после указанных ниже контейнеров (не их названий на стороне разработчика)
-    depends_on:
-      - server
-      - php
+      - ./client/nginx.conf:/etc/nginx/nginx.conf
+      - ./client/src:/usr/share/nginx/html
 
   #Сервер-контейнер для бэкенда
   server:
-    #Указание на необходимость сборки из Dockerfile
-    build:
-      #"Точка отсчёта", где находится docker-compose файл.
-      context: .
-      #Путь, где нужно искать Dockerfile относительно "точки отсчёта"
-      dockerfile: ./server/Dockerfile
-
+    #Сборка из образа nginx
+    image: nginx:1.22-alpine
     #Название контейнера для управления на стороне разработчика
     container_name: server_container
     #{Порт на стороне разработчика}:{Порт на стороне контейнера}
@@ -52,56 +37,48 @@ services:
       - "82:80"
     #"Внутренняя сеть" для взаимодействия между контейнерами
     networks:
-      - bridge
-    links:
-      - mysql
+      - app-network
     #Папки, в которых происходит дублирование файлов на сторонах >>> {у разработчика}:{внутри контейнера}
     volumes:
-      - ./server/code:/var/www/html
-      - ./server/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./server/nginx.conf:/etc/nginx/nginx.conf
+      - ./application/laravel:/var/www
     #Запускается или пакуется ТОЛЬКО после указанных ниже контейнеров (не их названий на стороне разработчика)
     depends_on:
-      - php
-      - mysql
+      - application
 
-  #PHP контейнер для работы php кода
-  php:
-    #Ставится образ "инструкции управления кодом", который будет "оживлён"
-    image: php:8.2.6-fpm
+  #PHP контейнер
+  application:
+    #Сборка из Dockerfile в папке application
+    build: application
     #Название контейнера для управления на стороне разработчика
-    container_name: php_container
+    container_name: application_container
     #"Внутренняя сеть" для взаимодействия между контейнерами
     networks:
-      - bridge
-
+      - app-network
     #Папки, в которых происходит дублирование файлов на сторонах >>> {у разработчика}:{внутри контейнера}
     #ДЛЯ PHP ДОЛЖНО ПРОИСХОДИТЬ ДУБЛИРОВАНИЕ ФАЙЛОВ АНАЛОГИЧНО АДРЕСАМ КОНТЕЙНЕРОВ-СЕРВЕРОВ, ИСПОЛЬЗУЮЩИХ PHP
     volumes:
-      - ./server/code:/var/www/html
-      #Заранее заданные внутри контейнера переменные среды для дальнейшего использования
+      - ./application/laravel:/var/www
+    #Заранее заданные внутри контейнера переменные среды для дальнейшего использования
     environment:
-      - TZ=${ENV_TZ}
-      - MYSQL_ROOT_PASSWORD=${ENV_MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${ENV_MYSQL_DATABASE}
-      - MYSQL_USER=${ENV_MYSQL_USER}
-      - MYSQL_PASSWORD=${ENV_MYSQL_PASSWORD}
+      - DB_HOST=mysql_container
+    #Запускается или пакуется ТОЛЬКО после указанных ниже контейнеров (не их названий на стороне разработчика)
+    depends_on:
+      - mysql
 
-  #БД-контейнер для табличек
+  #БД-контейнер
   mysql:
-    #Указание на необходимость сборки из Dockerfile
-    build:
-      #"Точка отсчёта", где находится docker-compose файл.
-      context: .
-      #Путь, где нужно искать Dockerfile относительно "точки отсчёта"
-      dockerfile: ./database/Dockerfile
+    #Сборка из образа mysql
+    image: mysql:8.0
     #Название контейнера для управления на стороне разработчика
     container_name: mysql_container
     #"Внутренняя сеть" для взаимодействия между контейнерами
     networks:
-      - bridge
+      - app-network
     #{Порт на стороне разработчика}:{Порт на стороне контейнера}
     ports:
       - "3307:3306"
+    restart: always
     #Папки, в которых происходит дублирование файлов на сторонах >>> {у разработчика}:{внутри контейнера}
     volumes:
       - ./database/db:/var/lib/mysql
