--- a/application/laravel/.env.example
+++ b/application/laravel/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:fwATCeGwDVV0Zc5knOyVgB0CKWO3Z5klQomHmfwjPKY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 #если другая бд, то после редактирования применить 'php artisan migrate'
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+# DB_HOST=mysql_container
+# DB_PORT=3307
+# DB_DATABASE=myDB
+# DB_USERNAME=user
+# DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
