--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,9 @@ services:
     volumes:
       - ./client/nginx.conf:/etc/nginx/nginx.conf
       - ./client/src:/usr/share/nginx/html
+    #Запускается или пакуется ТОЛЬКО после указанных ниже контейнеров (не их названий на стороне разработчика)
+    depends_on:
+      - server
 
   #Сервер-контейнер для бэкенда
   server:
