ПОЛНОЕ ОБНОВЛЕНИЕ - Временные страницы удалены за ненадобностью, ссылки на них были убраны. - Файлы скриптов, которые сопровождали те страницы, тоже убраны. - Файл с контактами, который временно находился в хранилище на стороне контейнера-клиента был убран. - Конфиги nginx были немного доработаны. - В файлах со стилями проведены косметические доработки, а также был добавлен файл для гугл иконок. - На клиентской части в некоторых скриптах упрощён код, добавлено больше пояснений. - Также написаны скрипты, разгружающие своим функционалом предыдущие скрипты. - Из них в том числе те, которые теперь позволяют работать с массивами данных как с полноценными объектами. - Улучшена обработка ошибок в файле с запросами к серверу. - Также добавлена работа с токенами, выдаваемыми сервером клиенту и обработка ошибки, происходящей в ходе шифрования токена. - Дополнен файл генерации формы, которая теперь может сериализовать и id контакта. - Немного изменён файл docker-compose.yaml, также появилась возможность использовать контейнерный artisan. - На стороне сервера убраны предустановленные файлы с миграциями БД, а также написана новая для решения поставленных задач. - Пример заполнения полей в .env.example был уточнён. - Также добавлен контроллер для работы с моделью контакта на стороне сервера. В Абстрактном контроллере добавлены функции для работы с запросами клиента. - Расширено разнообразие роутов для полноценного использования REST API во взаимодействиях между клиентом и сервером.

--- a/application/laravel/composer.json
+++ b/application/laravel/composer.json
@@ -7,20 +7,22 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/framework": "^12.0.0",
+        "laravel/tinker": "^2.10.1",
+        "webpractik/php_code_style": "*"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
+        "devbeta/psr12-strict-rules": "dev-main",
         "fakerphp/faker": "^1.23",
+        "friendsofphp/php-cs-fixer": "dev-master",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "phpunit/phpunit": "^11.5.3",
-        "squizlabs/php_codesniffer": "*",
-        "devbeta/psr12-strict-rules": "dev-main",
-        "friendsofphp/php-cs-fixer": "dev-master"
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
