--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -1,15 +1,15 @@
-# Количество процессов рекомендуется устанавливать равному количеству ядер CPU
-worker_processes  1;
+#Количество процессов рекомендуется устанавливать равному количеству ядер CPU
+worker_processes 1;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  200;
+    include mime.types;
+    default_type application/octet-stream;
+    sendfile on;
+    keepalive_timeout 200;
     client_max_body_size 25m;
     server {
         listen 80;
@@ -17,22 +17,22 @@ http {
 
         #Пользовательские заголовки
         add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range, X-CSRF-TOKEN, X-XSRF-TOKEN';
 
         set $base_root /var/www/public;
         root $base_root;
 
         charset UTF-8;
-        index index.php index.html;
+        index index.php;
 
         location / {
             root $base_root;
-            try_files $uri $uri/ /index.html$is_args$args;
+            try_files $uri $uri/ /index.php$is_args$args;
         }
 
         location ~ ^/.+\.php(/|$) {
-            #Связь с application(PHP-FPM) контейнером
+            #Обращение к application(PHP-FPM) контейнеру с портом 9000
             fastcgi_pass application:9000;
             fastcgi_split_path_info ^(.+\.php)(.*)$;
             include /etc/nginx/fastcgi_params;
