--- a/application/laravel/.env.example
+++ b/application/laravel/.env.example
@@ -21,11 +21,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 #если другая бд, то после редактирования применить 'php artisan migrate'
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+
+#This default:
+#DB_CONNECTION=mysql
+#DB_HOST=mysql
+#DB_PORT=3306
+#DB_DATABASE=myDB
+#DB_USERNAME=user
+#DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
