--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,9 @@ services:
     volumes:
       - ./client/nginx.conf:/etc/nginx/nginx.conf
       - ./client/src:/usr/share/nginx/html
+    #Запускается или пакуется ТОЛЬКО после указанных ниже контейнеров (не их названий на стороне разработчика)
+    depends_on:
+      - server
 
   #Сервер-контейнер для бэкенда
   server:
@@ -48,8 +51,10 @@ services:
 
   #PHP контейнер
   application:
-    #Сборка из Dockerfile в папке application
-    build: application
+    #Сборка из Dockerfile
+    build:
+      context: application
+      dockerfile: application.Dockerfile
     #Название контейнера для управления на стороне разработчика
     container_name: application_container
     #"Внутренняя сеть" для взаимодействия между контейнерами
@@ -78,6 +83,7 @@ services:
     #{Порт на стороне разработчика}:{Порт на стороне контейнера}
     ports:
       - "3307:3306"
+    #При закрытии повторно запускается
     restart: always
     #Папки, в которых происходит дублирование файлов на сторонах >>> {у разработчика}:{внутри контейнера}
     volumes:
@@ -89,3 +95,18 @@ services:
       - MYSQL_DATABASE=${ENV_MYSQL_DATABASE}
       - MYSQL_USER=${ENV_MYSQL_USER}
       - MYSQL_PASSWORD=${ENV_MYSQL_PASSWORD}
+  artisan:
+    #Нужен для 'docker-compose run artisan...'
+    #Сборка из Dockerfile
+    build:
+      context: application
+      dockerfile: artisan.Dockerfile
+    #Название контейнера для управления на стороне разработчика
+    container_name: artisan_container
+    #"Внутренняя сеть" для взаимодействия между контейнерами
+    networks:
+      - app-network
+    #Папки, в которых происходит дублирование файлов на сторонах >>> {у разработчика}:{внутри контейнера}
+    volumes:
+      - ./application/laravel:/var/www
+    entrypoint: ["php", "/var/www/artisan"]
